src/test/deca/syntax/invalid/created/bigNumbers/big_INT.deca
// Description:
//		Affection d'un flottant qui depasse la limite
// Resultat:
//		Ligne 7 : syntax error, this value is too large

{
	int value = 2147483648;
}
